Wed Mar 30 18:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/IFR_Client/IFR_BaseS.h:
	  Removed not needed include of inl file

Wed Mar 30 10:45:39 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp
	  (visit_structure):
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
	  (visit_members):

	  Generate a field array with "const" elements.  They should
	  be immutable.

Wed Mar 30 18:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/libraries.html:
	  Documented the new ImR_Client library

Wed Mar 30 10:38:07 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
	  (visit_valuetype, visit_members):

	  Only count members with PUBLIC or PRIVATE visibility in the data
	  member count.

	* tao/ObjRefTemplate/ObjectReferenceTemplateA.cpp:

	  Regenerated.

Wed Mar 30 13:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAO_IDL/be/be_visitor_array/any_op_cs.cpp:
	* TAO_IDL/be/be_visitor_enum/any_op_cs.cpp:
	* TAO_IDL/be/be_visitor_sequence/any_op_cs.cpp:
	* TAO_IDL/be/be_visitor_structure/any_op_cs.cpp:
	* TAO_IDL/be/be_visitor_union/any_op_cs.cpp:
	* tao/Any.cpp:
	* tao/DomainC.cpp:
	* tao/Exception.cpp:
	* tao/IFR_Client/IFR_Client_Adapter_Impl.cpp:
	* tao/IORManipulation/IORA.cpp:
	* tao/PortableServer/Object_SArg_Traits.h:
	* tao/PortableServer/POAManagerA.cpp:
	* tao/PortableServer/PortableServerA.cpp:
	* tao/PortableServer/TypeCode_SArg_Traits.h:
	* tao/RTCORBA/RTCORBAA.cpp:
	* tao/Valuetype/ValueBase.h:
	* tao/Valuetype/ValueFactory.h:
	  Use template<> instead of ACE_TEMPLATE_SPECIALIZATION

Wed Mar 30 13:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/DynAny_Test/data.cpp:
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.cpp:
	* examples/POA/DSI/Database_i.cpp:
	* orbsvcs/orbsvcs/FaultTolerance/FT_ServerRequest_Interceptor.cpp: