@@ -24,7 +24,7 @@
 //   is:
 //
 //     tao_idl
-//          -Gp -Gd -Ge 1 -DCORBA3 \
+//          -Gp -Gd -Ge 1 -Sc -DCORBA3 \
 //          -Wb,export_macro=HTIOP_Export \
 //          -Wb,export_include="HTIOP_Export.h" \
 //          -Wb,pre_include="ace/pre.h" \
